first thesis phase finished

--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -6,7 +6,7 @@
 Пояснительная записка \pagescount\ стр., \total{figure}\ рис., \total{table}\ табл., \total{citate} ист., \total{addition} прил.
 
 \tab
-\MakeUppercase{Опасные для человека растения, Мобильное приложение, Django, DRF, PostGIS, Flutter, BLoC, TensorFlow}
+\MakeUppercase{Опасные для человека растения, Мобильное приложение, Django, DRF, PostGIS, Flutter, BLoC, TensorFlow, Docker}
 
 \tab
 Объект исследования: автоматизированный учёт и хранение данных о распространение вредоносных растений.
