--- a/report/additions.tex
+++ b/report/additions.tex
@@ -1,8 +1,190 @@
 % !TeX spellcheck = russian-aot
 
-\addition{interface}{Макет пользовательского интерфейса}
+\addition{interface-plan}{Макет пользовательского интерфейса}
 
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{main_screen_plan}
+	\centering
+	\caption*{Приложение А.1. Главный экран клиентского приложения}
+\end{figure}
 
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{account_screen_plan}
+	\centering
+	\caption*{Приложение А.2. Экран аккаунта пользователя}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=8cm]{code_dialog_plan}
+	\centering
+	\caption*{Приложение А.3. Диалоговое окно ввода кода}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=8cm]{password_dialog_plan}
+	\centering
+	\caption*{Приложение А.4. Диалоговое окно изменения пароля}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{auth_screen_plan}
+	\centering
+	\caption*{Приложение А.5. Экран авторизации}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{login_screen_plan}
+	\centering
+	\caption*{Приложение А.6. Экран входа в систему}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{view_screen_plan}
+	\centering
+	\caption*{Приложение А.7. Экран демонстрации отчёта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{full_screen_plan}
+	\centering
+	\caption*{Приложение А.8. Экран отображения фотографии}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{report_screen_plan}
+	\centering
+	\caption*{Приложение А.9. Экран отправки отчёта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{login_page_plan}
+	\centering
+	\caption*{Приложение А.10. Страница входа в систему}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{login_page_plan}
+	\centering
+	\caption*{Приложение А.11. Главная страница сервисного сайта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{report_page_plan}
+	\centering
+	\caption*{Приложение А.12. Страница редактирования отчёта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{users_page_plan}
+	\centering
+	\caption*{Приложение А.13. Страница отображения пользователей системы}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{user_page_plan}
+	\centering
+	\caption*{Приложение А.14. Страница редактирования профиля пользователя}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=15cm]{reports_page_plan}
+	\centering
+	\caption*{Приложение А.15. Страница отображения отчётов}
+\end{figure}
+
+\cleardoublepage
+
+\addition{interface-real}{Пользовательский интерфейс}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{main_screen_real}
+	\centering
+	\caption*{Приложение А.1. Главный экран клиентского приложения}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{account_screen_real}
+	\centering
+	\caption*{Приложение А.2. Экран аккаунта пользователя}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=8cm]{code_dialog_real}
+	\centering
+	\caption*{Приложение А.3. Диалоговое окно ввода кода}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=8cm]{password_dialog_real}
+	\centering
+	\caption*{Приложение А.4. Диалоговое окно изменения пароля}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{auth_screen_real}
+	\centering
+	\caption*{Приложение А.5. Экран авторизации}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{login_screen_real}
+	\centering
+	\caption*{Приложение А.6. Экран входа в систему}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{view_screen_real}
+	\centering
+	\caption*{Приложение А.7. Экран демонстрации отчёта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{full_screen_real}
+	\centering
+	\caption*{Приложение А.8. Экран отображения фотографии}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{report_screen_real}
+	\centering
+	\caption*{Приложение А.9. Экран отправки отчёта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{login_page_real}
+	\centering
+	\caption*{Приложение А.10. Страница входа в систему}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{login_page_real}
+	\centering
+	\caption*{Приложение А.11. Главная страница сервисного сайта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{report_page_real}
+	\centering
+	\caption*{Приложение А.12. Страница редактирования отчёта}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{users_page_real}
+	\centering
+	\caption*{Приложение А.13. Страница отображения пользователей системы}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=12cm]{user_page_real}
+	\centering
+	\caption*{Приложение А.14. Страница редактирования профиля пользователя}
+\end{figure}
+
+\begin{figure}[!htbp]
+	\includegraphics[width=15cm]{reports_page_real}
+	\centering
+	\caption*{Приложение А.15. Страница отображения отчётов}
+\end{figure}
 
 \cleardoublepage
 
