--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -3,3 +3,26 @@
 \newcont{Заключение}
 
 \tab 
+В ходе выполнения работы были достигнутые поставленные цели: была разработана система, позволяющая решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции путём автоматического учёта информации об их местонахождении, поступающей от широких масс добровольцев, и дающая группе экологов возможность осуществлять модерацию и анализ собранных данных.
+
+\tab
+В ходе разработки системы были решены следующий задачи:
+\begin{enumerate}
+	\item Была разработана архитектура системы, описаны её компоненты, модель БД и пути передачи данных.
+	Также были разработаны сценарии использования системы и составлен макет пользовательского интерфейса.
+	\item Было создано серверное приложение для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
+	Оно было написано на языке программирования \en{Python} с использованием фреймворка \en{Django}.
+	При помощи фреймворка \en{Django Rest Framework} для приложения был создан и описан API, с помощью платформы \en{Docker} настроены способы запуска и конфигурации.
+	\item Было создано кроссплатформенное мобильное и web приложение, позволяющее добровольцем заносить наблюдения в систему.
+	Оно было написано на языке \en{Dart} с использованием фреймворка \en{Flutter} и архитектуры \en{BLoC}.
+\end{enumerate}
+
+\tab
+В результате тестирования серверной части приложения было выявлено увеличение времени, требующегося на обработку запросов отчётов при большом количестве запросов, загруженных в систему.
+Несмотря на то, что на текущую реализацию клиентского приложения это оно влияния не оказывает, был предложен вариант решения данной проблемы, который будет возможно реализовать, используя последующие версии фреймворка \en{Django}.
+
+\tab
+В результате исследования последовательностей действий пользователей, необходимых для выполнения сценариев использования клиентского приложения, были выявлены и сокращены некоторые последовательности.
+
+\tab
+В случае появления необходимости наличия у системы дополнительных функций и возможностей, таких как, например, сортировка отчётов по удалённости от текущего местоположения пользователя или добавление новых методов авторизации пользователей (по номеру телефона или аккаунту в социальной сети), возможность их добавления была предусмотрена.
