--- a/report/description.tex
+++ b/report/description.tex
@@ -6,6 +6,7 @@
 Во ходе выбора технологий особое внимание было уделено лицензии, под которой распространяется их исходный код, так как распространение конечного продукта планируется под открытой лицензией.
 
 \subsection{Серверная часть ПО}
+\label{subsec:serverside-app}
 
 \tab
 Серверная часть системы была написана на языке программирования \en{Python} с использованием фреймворка \en{Django}.
@@ -76,7 +77,7 @@
 Для предотвращения DDoS атак на систему было предусмотрено ограничение на отправку пользователем требующих авторизации запросов в 4 запроса в минуту.
 
 \tab
-HTTP запросы пользователей обрабатываются при помощи объекта класса \code{Simple\-Router}, входящего в состав фреймворка \en{DRF}. \en{OpenAPI} спецификация API системы представлена в \additionref{openapi}{Приложении Б}.
+HTTP запросы пользователей обрабатываются при помощи объекта класса \code{Simple\-Router}, входящего в состав фреймворка \en{DRF}. \en{OpenAPI} спецификация API системы представлена в \additionref{openapi}{Приложении В}.
 
 \subsection{Клиентская часть ПО}
 
@@ -124,7 +125,7 @@ HTTP запросы пользователей обрабатываются пр
 Для реализации нейронной сети был выбран фреймворк \en{TensorFlow}\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
 
 \tab
-В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{XCeption}\cite{xception-better}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
+В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{XCeption}\cite{xception-better}, обученная на наборе данных \en{Image\-Net}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
 
 \tab
 Система автоматической проверки изображений -- желательный, но не обязательный компонент системы.
@@ -150,18 +151,18 @@ HTTP запросы пользователей обрабатываются пр
 В качестве алгоритма оптимизации был использован алгоритм \en{Adam}, а в качестве функции потерь -- функция категориальной кросс-энтропии.
 Прогресс обучения измерялся по точности классификации.
 Схема скомпилированной модели представлена на рисунке 5.
-% \picturefive
+\picturefive
 
 \tab
 Обучение верхних слоёв модели производилось в течении 16 эпох, при этом оно прекращалось как только прогресс за две эпохи подряд не превосходил 0.01 процента.
 Темп обучения составил 0.0001.
 График обучения представлен на рисунке 6.
-% \picturesix
+\picturesix
 
 \tab
 Дообучение модели (обучение с 80\% \textquote{размороженных} нижних, предобученных слоёв) производилось в таких же условиях, только на этот раз в качестве алгоритма оптимизации был использован алгоритм \en{RMSprop}, а темп обучения составил 0.00001.
 График обучения представлен на рисунке 7.
-% \pictureseven
+\pictureseven
 
 \tab
 После окончания обучения модель была преобразована в формат .TFLITE для использования в клиентской части системы.
@@ -192,7 +193,9 @@ HTTP запросы пользователей обрабатываются пр
 
 \tab
 В качестве альтернативы локальному режиму запуска предлагается использовать режим запуска, использующий платформу \en{Docker} и утилиту \en{docker-compose}.
+Эта платформа позволяет разворачивать программы в виртуальных окружениях, называемых контейнерами, использующих возможности виртуализации операционной системы \en{Linux}.
 Для его реализации был создан файл с определениями версий и настроек контейнеров, используемых системой, а также файл, содержащий команды для сборки образа самой системы.
+Для связи контейнеров используется виртуальная сеть, а также общие для нескольких контейнеров тома.
 В этом режиме запуска системе не требуется никаких дополнительных настроек кроме конфигурационного файла.
 Также этот режим по умолчанию использует сервер \en{Daphne} и стандартный режим запуска системы.
 
