--- a/report/notes.tex
+++ b/report/notes.tex
@@ -3,6 +3,17 @@
 \newcont{Обозначения и сокращения}
 
 \begin{itemize}
-	\item 
+	\item Application Programming Interface (API) -- программный интерфейс приложения, описание способов, которыми одна программа имеет возможность взаимодействовать с другими.
+	\item Business Logic Component (BLoC) -- шаблон проектирования, в основе которого лежит принцип обособления бизнес логики приложения от его графического интерфейса и связи их при помощи обработки потоков событий.
+	\item Dart -- язык программирования, предназначенный для создания клиентских приложений.
+	\item Django -- web фреймворк, разработанный на языке \en{Python}, предназначенный для создания web приложений при помощи языка \en{Python}, использующий шаблон проектирования \textquote{Модель-Представление-Контроллер}.
+	\item Django Rest Framework (DRF) -- дополнительный набор инструментов для фреймворка \en{Django} для создания web API.
+	\item Docker -- платформа для запуска приложений в изолированных виртуальных на уровне операционной среды средах, называемых контейнерами.
+	\item docker-compose -- программа для настройки и запуска систем, состоящих из большого количества \en{Docker} контейнеров.
+	\item Flutter -- фреймворк для языка программирования \en{Dart}, позволяющий разрабатывать с его помощью кросс-платформенные приложения.
+	\item PostgreSQL -- объектно-реляционная система управления базами данных.
+	\item PostGIS -- программа, добавляющая поддержку географических объектов в реляционную базу данных PostgreSQL.
+	\item Python -- высокоуровневый интерпретируемый язык программирования общего назначения.
+	\item TensorFlow -- программная библиотека для машинного обучения, построения и тренировки нейронных сетей.
+	\item Фреймворк -- программное обеспечение, облегчающее разработку и объединение разных компонентов большого программного проекта.
 \end{itemize}
-
