--- a/report/project.tex
+++ b/report/project.tex
@@ -22,7 +22,302 @@
 
 \tab
 Были разработаны следующие сценарии использования:
-\input{scenarios}
+
+\subsubsection{Сценарии использования клиентского приложения}
+
+\tab
+Действующее лицо: пользователь.
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Просмотр опубликованной отсортированной информации о наблюдениях} \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Пользователь открывает клиентское приложение.
+		\item Пользователь нажимает на один из указателей на карте, ему демонстрируются подробные сведения об отчёте и комментарии к нему.
+		\item По желанию пользователь нажимает на фотографии, прикреплённые к отчёту и просматривает их увеличенную версию.
+	\end{itemize}
+	Результат: Пользователь ознакомился как с общей статистикой распространения потенциально опасных растений на карте, так и с заинтересовавшими его конкретными отчётами.
+	
+	\item \textit{Просмотр информации о системе, её задачах и краткого руководства по использованию} \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{About}}, ему демонстрируется информация о системе, её задачах и краткое руководство по использованию.
+	\end{itemize}
+	Результат: Пользователь посмотрел данные со всей информацией по операциям конкретного изделия.
+	
+	\item \textit{Авторизация в системе} \\
+	Условие: На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}} ИЛИ на основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+} ИЛИ на странице просмотра отчёта нажимает на ссылку \textquote{\en{Sign in}}. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Открывается страница авторизации пользователя.
+		\item Пользователь нажимает кнопку \textquote{\en{Already have account?}}.
+		\item Пользователь вводит свой адрес электронной почты в поле ввода адреса электронной почты.
+		\item Пользователь вводит свой пароль в поле ввода пароля.
+		\item Пользователь вводит свой пароль в поле ввода подтверждения пароля.
+		\item Пользователь подтверждает согласие на сбор и обработку персональных данных, поставив флаг \textquote{\en{Agree to terms and conditions}}.
+		\item Пользователь нажимает кнопку \textquote{\en{Submit}}.
+		\item Пользователь подтверждает указанный адрес электронной почты, в открывшемся диалоговом окне он вводит восьмизначный код, отправленный на его электронную почту.
+		\item Пользователь нажимает кнопку \textquote{\en{Submit}}.
+		\item Диалоговое окно закрывается.
+		\item В нижнем правом углу появляется сообщение о статусе авторизации и, в случае её успеха, открывается главная страница приложения.
+	\end{itemize}
+	Альтернативный сценарий (условие - наличие у пользователя аккаунта):
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Открывается страница авторизации пользователя.
+		\item Пользователь вводит свой адрес электронной почты в поле ввода адреса электронной почты.
+		\item Пользователь вводит свой пароль в поле ввода пароля
+		\item Пользователь нажимает кнопку \textquote{\en{Submit}}.
+		\item В нижнем правом углу появляется сообщение о статусе авторизации и, в случае её успеха, открывается главная страница приложения.
+	\end{itemize}
+	Результат: Пользователь авторизован в системе и может выполнять требующие авторизации сценарии.
+	
+	\item \textit{Отправка отчёта о наблюдении потенциально опасного растения} \\
+	Условие: Пользователь авторизован в системе. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item На основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+}.
+		\item Снизу экрана открывается форма отправки отчёта.
+		\item Пользователь заполняет поля описания находки и, по желанию, описания местоположения находки. При возможности поле описания местоположения находки заполняется автоматически (см. п. 3.5) текущим адресом пользователя.
+		\item Пользователь выбирает местоположение своей находки на карте ИЛИ нажимает на кнопку \textquote{Использовать моё местонахождение}.
+		\item Пользователь заполняет даты и времени обнаружения растения при помощи специальных виджетов выбора даты и времени.
+		\item По желанию пользователь загружает фотографии находки. Фотографии проверяются системой автоматической проверки изображений и пользователь ознакамливается с результатами проверки справа от поля для загрузки фотографий.
+		\item По желанию пользователь нажимает на фотографии, прикреплённые к отчёту и просматривает их увеличенную версию.
+		\item По желанию пользователь оставляет общий комментарий к своей находке.
+		\item Пользователь нажимает кнопку \textquote{\en{Send}}.
+		\item Форма отправки отчёта закрывается.
+		\item В нижнем правом углу появляется сообщение о статусе отправки и, в случае успеха, на карту добавляется новая метка в указанном месте.
+	\end{itemize}
+	Результат: Пользователь отправил отчёт о наблюдении потенциально опасного растения, его фотографии были предварительно проверены и данные загружены в систему.
+	
+	\item \textit{Написание комментария к отчёту} \\
+	Условие: Пользователь авторизован в системе И на основной странице приложения пользователь нажимает на один из указателей на карте. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Пользователь вводит свой комментарий к отчёту в поле для ввода комментария и нажимает кнопку с символом \textquote{>}.
+		\item Поле для ввода комментария очищается.
+		\item В нижнем правом углу появляется сообщение о статусе отправки комментария.
+	\end{itemize}
+	Результат: Пользователь оставил комментарий, дополнив информацию, изложенную в отчёте.
+	
+	\item \textit{Редактирование профиля} \\
+	Условие: Пользователь авторизован в системе. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}}.
+		\item По желанию пользователь выбирает новую фотографию профиля.
+		\item По желанию пользователь вводит новое имя и нажимает \textquote{\en{Send}}.
+		\item По желанию пользователь нажимает на кнопку \textquote{Адрес электронной почты} и вводит новый адрес электронной почты и код её подтверждения в открывшемся диалоговом окне.
+		\item По желанию пользователь нажимает на кнопку \textquote{Изменить пароль} и вводит новый пароль и его подтверждение в открывшемся диалоговом окне.
+		\item По желанию пользователь нажимает на кнопку \textquote{Выйти} ИЛИ \textquote{Удалить аккаунт}.
+		\item В нижнем правом углу появляется сообщение о статусе обновления профиля.
+		\item В случае выхода из системы открывается главная страница приложения.
+	\end{itemize}
+	Результат: Пользователь оставил комментарий, дополнив информацию, изложенную в отчёте.
+\end{itemize}
+
+\subsubsection{Сценарии использования сервисного сайта}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Вход на сервисный сайт} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор вводит свой адрес электронной почты в поле ввода адреса электронной почты.
+		\item Специалист ИЛИ администратор вводит свой пароль в поле ввода пароля.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор авторизован в системе и может выполнять требующие авторизации сценарии.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Поиск отчета по карте} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор находит интересующий его маркер отчёта на карте.
+		\item Специалист ИЛИ администратор нажимает на него.
+		\item Открывается страница редактирования отчёта.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор открыл страницу редактирования интересующего его отчёта.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Фильтрация отчётов по статусу или типу} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор открывает вкладку отчётов.
+		\item В меню справа специалист ИЛИ администратор настраивает фильтрацию отчётов по статусу или типу.
+		\item Отображается интересующая специалиста ИЛИ администратора выборка отчётов.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор отфильтровал отчёты в соответствии с интересующими его признаками.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Поиск отчётов по дате отправки} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор открывает вкладку отчётов.
+		\item В меню сверху специалист ИЛИ администратор выбирает интересующую его дату отправки.
+		\item Отображается интересующая специалиста ИЛИ администратора выборка отчётов.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор нашёл отчёты, отправленные за интересующую его дату.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Сортировка отчётов} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор открывает вкладку отчётов.
+		\item В меню сверху специалист ИЛИ администратор выбирает поле отчёта для сортировки.
+		\item Специалист ИЛИ администратор щёлкает по нему для сортировки ИЛИ щёлкает ещё раз для изменения порядка сортировки.
+		\item Отображаются отчёты в отсортированном виде.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор отсортировал отчёты по интересующему его признаку.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Выполнение действия с отчётом} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор открывает вкладку отчётов.
+		\item В меню сверху специалист ИЛИ администратор выбирает действие.
+		\item Специалист ИЛИ администратор выставляет флажки справа от тех отчётов, к которым он хотел бы применить это действие.
+		\item Специалист ИЛИ администратор нажимает на кнопку \textquote{\en{go}}.
+		\item Выбранное действие производится с выбранными отчётами.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор применил выбранное действие к выбранным отчётам.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Редактирование отчёта} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор открывает вкладку отчётов.
+		\item Специалист ИЛИ администратор выбирает интересующий его отчёт.
+		\item Специалист ИЛИ администратор нажимает на его дату отправки.
+		\item Открывается окно редактирования отчёта.
+		\item Специалист ИЛИ администратор редактирует информацию об отчёте.
+		\item Специалист ИЛИ администратор нажимает кнопку \textquote{\en{Save}} или \textquote{\en{Save and continue editing}}.
+		\item В зависимости от нажатой кнопки, открывается вкладка отчётов или окно редактирования отчёта.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор отредактировал информацию выбранного отчёта.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Удаление отчёта} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор открывает вкладку отчётов.
+		\item Специалист ИЛИ администратор выбирает интересующий его отчёт.
+		\item Специалист ИЛИ администратор нажимает на его дату отправки.
+		\item Открывается окно редактирования отчёта.
+		\item Специалист ИЛИ администратор нажимает кнопку \textquote{\en{Delete}}.
+		\item Открывается вкладка отчётов.
+	\end{itemize}
+	Результат: Специалист ИЛИ администратор удалил выбранный отчёт.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Поиск профиля пользователя по роли} \\
+	Действующее лицо: администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Администратор открывает вкладку профилей пользователей.
+		\item В меню справа администратор настраивает фильтрацию профилей пользователей по роли.
+		\item Отображается интересующая администратора выборка профилей пользователей.
+	\end{itemize}
+	Результат: Администратор отфильтровал профили пользователей системы по роли.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Сортировка профилей пользователей} \\
+	Действующее лицо: администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Администратор открывает вкладку профилей пользователей.
+		\item В меню сверху администратор выбирает поле профиля пользователя для сортировки.
+		\item Администратор щёлкает по нему для сортировки ИЛИ щёлкает ещё раз для изменения порядка сортировки.
+		\item Отображаются профили пользователей в отсортированном виде.
+	\end{itemize}
+	Результат: Администратор отсортировал профили пользователей по интересующему его признаку.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Выполнение действия с профилем пользователя} \\
+	Действующее лицо: администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Администратор открывает вкладку профилей пользователей.
+		\item В меню сверху администратор выбирает действие.
+		\item Администратор выставляет флажки справа от тех профилей пользователей, к которым он хотел бы применить это действие.
+		\item Администратор нажимает на кнопку \textquote{\en{go}}.
+		\item Выбранное действие производится с выбранными профилями пользователей.
+	\end{itemize}
+	Результат: Администратор применил выбранное действие к выбранным профилям пользователей.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Редактирование профиля пользователя} \\
+	Действующее лицо: администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Администратор открывает вкладку профилей пользователей.
+		\item Администратор выбирает интересующий его профиль пользователя.
+		\item Администратор нажимает на его адрес электронной почты.
+		\item Открывается окно редактирования профиля пользователя.
+		\item Администратор редактирует информацию о профиле пользователя.
+		\item Администратор нажимает кнопку \textquote{\en{Save}} или \textquote{\en{Save and continue editing}}.
+		\item В зависимости от нажатой кнопки, открывается вкладка профилей пользователей или окно редактирования профиля пользователя.
+	\end{itemize}
+	Результат: Администратор отредактировал информацию выбранного профиля пользователя.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Блокирование профиля пользователя} \\
+	Действующее лицо: администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Администратор открывает вкладку профилей пользователей.
+		\item Администратор выбирает интересующий его профиль пользователя.
+		\item Администратор нажимает на его адрес электронной почты.
+		\item Открывается окно редактирования профиля пользователя.
+		\item Администратор снимает флажок поля \textquote{\en{Active}}.
+		\item Администратор нажимает кнопку \textquote{\en{Save}} или \textquote{\en{Save and continue editing}}.
+		\item В зависимости от нажатой кнопки, открывается вкладка профилей пользователей или окно редактирования профиля пользователя.
+	\end{itemize}
+	Результат: Администратор заблокировал выбранный профиль пользователя, данный пользователь, специалист или администратор больше не сможет войти в систему.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Удаление отчёта} \\
+	Действующее лицо: администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Администратор открывает вкладку профилей пользователей.
+		\item Администратор выбирает интересующий его профиль пользователя.
+		\item Администратор нажимает на его адрес электронной почты.
+		\item Открывается окно редактирования профиля пользователя.
+		\item Администратор нажимает кнопку \textquote{\en{Delete}}.
+		\item Открывается вкладка профилей пользователей.
+	\end{itemize}
+	Результат: Администратор удалил выбранный профиль пользователя, все связанные с ним отчёты сохранились.
+\end{itemize}
+
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+	\item \textit{Выход с сервисного сайта} \\
+	Действующее лицо: специалист ИЛИ администратор. \\
+	Основной сценарий:
+	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
+		\item Специалист ИЛИ администратор наживает на ссылку \textquote{Выйти} в правом верхнем углу экрана.
+		\item Отображается страница входа в систему.
+	\end{itemize}
+	Результат: Специалист вышел из своей учётной записи и теперь в систему с того же устройства может войти другой пользователь.
+\end{itemize}
 
 \subsection{Политика конфиденциальности}
 
@@ -122,9 +417,75 @@
 
 \tab
 В соответствии со сценариями использования был разработан макет пользовательского интерфейса.
-\additionref{interface}{Приложении А}.
+\additionref{interface-plan}{Приложении А}.
 
 \subsubsection{Пользовательский интерфейс клиентского приложения}
 
+\tab
+При запуске клиентского приложения открывается его главный экран (приложение А.1).
+На нём изображена карта с центром в Санкт-Петербурге.
+На карте иконками растений отмечены места, в которых пользователи системы отметили нахождение отслеживаемых растений.
+Цвет иконок на карте различается в зависимости от статуса отчёта (\textquote{необработано} - зелёный, \textquote{актуально} - оранжевый и \textquote{неактуально} - серый).
+Если пользователь дал приложению доступ к определению своего местоположения, на карте также будет отмечена его позиция иконкой в виде человека, а сама карта изначально будет центрирована по его местоположению.
+\begin{enumerate}
+	\item При нажатии на кнопку навигации в правом верхнем углу экрана открывается панель навигации (приложение А.1).
+	Вверху панели отображается фото профиля пользователя и его имя в случае, если он установил себе имя, или же адрес электронной почты.
+	\begin{enumerate}
+		\item При нажатии на кнопку \textquote{Account} открывается экран аккаунта пользователя (приложение А.2).
+		Вверху экрана отображается фото профиля пользователя, которое можно заменить при нажатии на него.
+		Также пользователю предлагается изменить его имя, адрес электронной почты, пароль, а также выйти из системы и удалить аккаунт.
+		\begin{enumerate}
+			\item При изменении электронной почты после ввода нового адреса открывается диалоговое окно, в которое для подтверждения изменения пользователь должен ввести код из полученного им письма (приложение А.3).
+			\item При изменении пароля открывается диалоговое окно, в которое для подтверждения изменения пользователь должен ввести новый пароль дважды (приложение А.4).
+		\end{enumerate}
+		В случае, если пользователь ещё не произвёл авторизацию в системе, открывается экран авторизации (приложение А.5).
+		На этом экране пользователю предлагается ввести адрес электронной почты создаваемого аккаунта и дважды повторить его пароль.
+		Также для создания профиля пользователю необходимо поставить флажок о том, что он согласен с политикой конфиденциальности данных.
+		\begin{enumerate}
+			\item При нажатии на кнопку \textquote{\en{Already have account?}} открывается экран входа в систему (приложение А.6).
+			От экрана авторизации он отличается тем, что для входа систему нет необходимости повторно подтверждать пароль, электронную почту и соглашаться с политикой конфиденциальности данных.
+			Обратно на экран авторизации с него можно попасть, нажав на кнопку \textquote{\en{New to HogWeedGo?}}.
+			\item При нажатии на кнопку \textquote{\en{Already have account?}} открывается диалоговое окно, в которое для подтверждения адреса электронной почты пользователь должен ввести код из полученного им письма (приложение А.3).
+			\item При нажатии на слова \textquote{\en{Terms and conditions}}, помеченные голубым в описании флажка согласия с политикой конфиденциальности, пользователь перенаправляется на страницу с опубликованной политикой конфиденциальности системы и управляющей ей системы.
+		\end{enumerate}
+		\item При нажатии на кнопку \textquote{\en{Map}} открывается главный экран приложения с картой.
+		\item При нажатии на кнопку \textquote{\en{About}} открывается экран с информацией о системе и об организации, которая ей управляет.
+		\item При нажатии на кнопку \textquote{\en{Feedback}} пользователь перенаправляется на страницу ссвязи с организацией, управляющей системой.
+	\end{enumerate}
+	\item При нажатии на отметку на карте открывается панель демонстрации отчёта (приложение А.7).
+	На этой панели пользователю демонстрируется информация данного отчёта, фотографии, приложенные к нему, а также комментарии, дополняющие отчёт.
+	Пользователю предлагается также оставить комментарий к отчёту.
+	\begin{enumerate}
+		\item При нажатии на приложенную к отчёту фотографию, она открывается в полноэкранном режиме (приложение А.8).
+		При нажатии на кнопку с символом дискеты в левом нижнем углу экрана пользователю предлагается скачать эту фотографию.
+	\end{enumerate}
+	\item При нажатии на кнопку \textquote{+} в левом нижнем углу экрана открывается экран отправки отчёта(приложение А.9).
+	На этом экране пользователю предлагается ввести данные, необходимые для отправки отчёта (краткое описание найденного растения, его адрес, место находки на карте, а также дату и время находки).
+	По нажатию на кнопку \textquote{\en{Send}} отчёт отправляется в систему.
+\end{enumerate}
+
 \subsubsection{Пользовательский интерфейс сервисного сайта}
 
+Макетом для сервисного сайта системы послужил автоматически сгенерированный фреймворком \en{Django} сайт.
+При запуске сервисного сайта открывается страница входа (приложение А.10).
+После авторизации пользователя в системе открывается главная страница сайта (приложение А.11).
+На ней справа отображаются последние действия, совершенные в системе, снизу на карте отмечены места, в которых пользователи системы отметили нахождение отслеживаемых растений.
+При нажатии на такую отметку открывается страница редактирования соответствующего отчёта (приложение А.12).
+\begin{enumerate}
+	\item При нажатии на кнопку \textquote{\en{Users}} открывается страница отображения пользователей системы (приложение А.13).
+	На этой странице с профилями пользователей можно проводить массовые действия (см п. \ref{subsec:serverside-app}), искать их, сортировать и фильтровать.
+	\begin{enumerate}
+		\item При нажатии на адрес электронной почты пользователя открывается страница редактирования соответствующего профиля пользователя (приложение А.14).
+		На этой странице профиль можно редактировать, блокировать, удалять, а также написать пользователю электронное письмо, перейдя по ссылке в соответствующем поле.
+	\end{enumerate}
+	\item При нажатии на кнопку \textquote{\en{Reports}} открывается страница отображения отчётов (приложение А.15).
+	На этой странице с отчётами можно проводить массовые действия (см п. \ref{subsec:serverside-app}), искать их, сортировать и фильтровать.
+	\begin{enumerate}
+		\item При нажатии на дату отправки открывается страница редактирования соответствующего отчёта (приложение А.12).
+		На этой странице отчёт можно редактировать, удалять, а также редактировать и удалять приложенные к нему комментарии и фотографии.
+		При нажатии на ссылку в соответствующем поле открывается редактирования профиля пользователя, отправившего отчёт.
+	\end{enumerate}
+\end{enumerate}
+
+\tab
+Рисунки экрана приложений, разработанных по макету, находятся в \additionref{interface-real}{Приложении Б} и имеют соответствующую нумерацию.
