--- a/report/report.tex
+++ b/report/report.tex
@@ -26,8 +26,10 @@
 \usepackage{array}
 \usepackage{xinttools}
 
+\usepackage{caption}
 \usepackage{tikz}
 \usetikzlibrary{positioning, fit, backgrounds, calc}
+\graphicspath{ {./images/} }
 
 % \usepackage{showkeys}
 \usepackage[unicode, colorlinks=true, linkcolor=, urlcolor=blue, citecolor=]{hyperref}
