--- a/report/tests.tex
+++ b/report/tests.tex
@@ -120,7 +120,7 @@
 \end{itemize}
 Также была оптимизирована форма изменения данных профиля пользователя:
 \begin{itemize}
-	\item Поля, представленные в виде диалоговых окон, были заменены на поля ввода с автоматически открывающимися диалоговыми окнами.
+	\item Поле изменения электронной почты, представленное в виде диалогового окна, было заменено на поле ввода с автоматически открывающимся диалоговым окном.
 \end{itemize}
 
 \tab
